[package]
name = "feo"
version = "0.0.1"
edition = "2024"

[dependencies]
feo-com = { workspace = true }
feo-time = { workspace = true }
feo-tracing = { workspace = true }
libc = { workspace = true }
mio = { workspace = true }
postcard = { workspace = true, features = [
    "experimental-derive",
], optional = true }
serde = { workspace = true, optional = true }
ctrlc = { workspace = true, features = ["termination"] }

[features]
default = []
loop_duration_meter = []
