# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@aspect_rules_lint//format:defs.bzl", "format_multirun", "format_test")

format_multirun(
    name = "format.fix",
    # TODO add C/C++ format checking one we have a score toolchain
    # c = "@llvm_toolchain_llvm//:bin/clang-format",
    # cc = "@llvm_toolchain_llvm//:bin/clang-format",
    rust = "@rules_rust//tools/upstream_wrapper:rustfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
    visibility = [
        "//visibility:public",
    ],
)

# See https://github.com/aspect-build/rules_lint/blob/main/docs/formatting.md#2-test-target
# for why `no_sandbox` and `workspace` are required.
format_test(
    name = "format.check",
    # TODO add C/C++ format checking one we have a score toolchain
    # c = "@llvm_toolchain_llvm//:bin/clang-format",
    # cc = "@llvm_toolchain_llvm//:bin/clang-format",
    no_sandbox = True,
    rust = "@rules_rust//tools/upstream_wrapper:rustfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
    visibility = [
        "//visibility:public",
    ],
    workspace = "//:MODULE.bazel",
)
