# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "libcycle_benchmark_rust",
    srcs = [
        "src/activities.rs",
        "src/composites.rs",
        "src/config.rs",
        "src/lib.rs",
    ],
    crate_name = "cycle_benchmark",
    rustc_flags = [
        "-Clink-arg=-lstdc++",
        "-Clink-arg=-lm",
        "-Clink-arg=-lc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//feo:libfeo_recording_rust",
        "//feo-com:libfeo_com_rust",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
        "//feo-time:libfeo_time_rust",
        "//feo-tracing:libfeo_tracing_rust",
        "@score-baselibs//score/language/futurecpp",
        "@score_crates//:postcard",
        "@score_crates//:serde",
        "@score_crates//:serde_json",
        "@score_crates//:tracing",
    ],
)

rust_binary(
    name = "cycle_bench",
    srcs = [
        "src/bin/cycle_bench.rs",
    ],
    rustc_flags = [
        "-Clink-arg=-lstdc++",
        "-Clink-arg=-lm",
        "-Clink-arg=-lc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":libcycle_benchmark_rust",
        "//feo:libfeo_recording_rust",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
        "//feo-time:libfeo_time_rust",
        "//feo-tracing:libfeo_tracing_rust",
        "@score-baselibs//score/language/futurecpp",
    ],
)
