# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "libmini_adas_rust",
    srcs = [
        "src/activities/components.rs",
        "src/activities/messages.rs",
        "src/activities/mod.rs",
        "src/config.rs",
        "src/ffi.rs",
        "src/lib.rs",
    ],
    crate_features = [
        "com_linux_shm",
        "signalling_relayed_tcp",
    ],
    crate_name = "mini_adas",
    proc_macro_deps = [
        "//feo-cpp-macros:feo_cpp_macros_rust",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":cpp_activities",
        "//feo:libfeo_rust",
        "//feo-com:libfeo_com_rust",
        "//feo-cpp-build:libfeo_cpp_build_rust",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
        "//feo-time:libfeo_time_rust",
        "//feo-tracing:libfeo_tracing_rust",
        "@score_crates//:tracing",
    ],
)

rust_library(
    name = "libmini_adas_recording_rust",
    srcs = [
        "src/activities/components.rs",
        "src/activities/messages.rs",
        "src/activities/mod.rs",
        "src/config.rs",
        "src/ffi.rs",
        "src/lib.rs",
    ],
    crate_features = [
        "com_linux_shm",
        "recording",
        "signalling_relayed_tcp",
    ],
    crate_name = "mini_adas",
    proc_macro_deps = [
        "//feo-cpp-macros:feo_cpp_macros_rust",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":cpp_activities",
        "//feo:libfeo_recording_rust",
        "//feo-com:libfeo_com_rust",
        "//feo-cpp-build:libfeo_cpp_build_rust",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
        "//feo-time:libfeo_time_rust",
        "//feo-tracing:libfeo_tracing_rust",
        "@score_crates//:postcard",
        "@score_crates//:serde",
        "@score_crates//:tracing",
    ],
)

rust_binary(
    name = "adas_primary",
    srcs = [
        "src/bin/adas_primary.rs",
    ],
    crate_features = ["signalling_relayed_tcp"],
    rustc_flags = [
        "-Clink-arg=-lstdc++",
        "-Clink-arg=-lm",
        "-Clink-arg=-lc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":libmini_adas_rust",
        "//feo:libfeo_rust",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
        "//feo-time:libfeo_time_rust",
        "//feo-tracing:libfeo_tracing_rust",
    ],
)

rust_binary(
    name = "adas_secondary",
    srcs = [
        "src/bin/adas_secondary.rs",
    ],
    crate_features = ["signalling_relayed_tcp"],
    rustc_flags = [
        "-Clink-arg=-lstdc++",
        "-Clink-arg=-lm",
        "-Clink-arg=-lc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":libmini_adas_rust",
        "//feo:libfeo_rust",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
        "//feo-time:libfeo_time_rust",
        "//feo-tracing:libfeo_tracing_rust",
    ],
)

rust_binary(
    name = "adas_recorder",
    srcs = [
        "src/bin/adas_recorder.rs",
    ],
    crate_features = [
        "recording",
        "signalling_relayed_tcp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":libmini_adas_recording_rust",
        "//feo:libfeo_recording_rust",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
        "//feo-time:libfeo_time_rust",
        "//feo-tracing:libfeo_tracing_rust",
    ],
)

rust_binary(
    name = "adas_deserializer",
    srcs = [
        "src/bin/adas_deserializer.rs",
    ],
    crate_features = ["recording"],
    visibility = ["//visibility:public"],
    deps = [
        ":libmini_adas_recording_rust",
        "//feo:libfeo_recording_rust",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
        "//feo-tracing:libfeo_tracing_rust",
        "@score_crates//:postcard",
        "@score_crates//:serde",
    ],
)

cc_library(
    name = "cpp_activities",
    srcs = [
        "src/cpp/lane_assist.cpp",
        "src/cpp/trajec_vis.cpp",
    ],
    hdrs = [
        "src/include/lane_assist.h",
        "src/include/trajec_vis.h",
    ],
    includes = [
        "src/include",
        "//feo-cpp-build:src/include",
    ],
    deps = [
        "//feo-cpp-build:libfeo_cpp_build_cc",
    ],
)
