# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "libmini_adas_rust",
    srcs = [
        "src/activities/components.rs",
        "src/activities/input.rs",
        "src/activities/mod.rs",
        "src/activities/output.rs",
        "src/config.rs",
        "src/lib.rs",
    ],
    crate_features = [
        "com_linux_shm",
        "signalling_relayed_tcp",
    ],
    crate_name = "mini_adas",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/rust/mini-adas/mini-adas-gen:mini_adas_gen_rs",
        "//src/feo:libfeo_rust",
        "//src/feo-com:libfeo_com_rust",
        "//src/feo-time:libfeo_time_rust",
        "//src/feo-tracing:libfeo_tracing_rust",
        "@score_baselibs_rust//src/log/score_log",
        "@score_crates//:tracing",
    ],
)

rust_library(
    name = "libmini_adas_rust_mw_com",
    srcs = [
        "src/activities/components.rs",
        "src/activities/input.rs",
        "src/activities/mod.rs",
        "src/activities/output.rs",
        "src/config.rs",
        "src/lib.rs",
    ],
    crate_features = [
        "com_mw",
        "signalling_relayed_tcp",
    ],
    crate_name = "mini_adas",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/rust/mini-adas/mini-adas-gen:mini_adas_gen_rs_mw_com",
        "//src/feo:libfeo_rust",
        "//src/feo-com:libfeo_com_rust_mw_com",
        "//src/feo-time:libfeo_time_rust",
        "//src/feo-tracing:libfeo_tracing_rust",
        "@score_baselibs_rust//src/log/score_log",
        "@score_communication//score/mw/com/impl/rust/com-api/com-api",
        "@score_crates//:tracing",
    ],
)

rust_binary(
    name = "adas_primary",
    srcs = [
        "src/bin/adas_primary.rs",
    ],
    crate_features = ["signalling_relayed_tcp"],
    visibility = ["//visibility:public"],
    deps = [
        ":libmini_adas_rust",
        "//src/feo:libfeo_rust",
        "//src/feo-com:libfeo_com_rust",
        "//src/feo-time:libfeo_time_rust",
        "//src/feo-tracing:libfeo_tracing_rust",
        "@score_baselibs_rust//src/log/score_log",
        "@score_baselibs_rust//src/log/stdout_logger",
    ],
)

rust_binary(
    name = "adas_primary_mw_com",
    srcs = [
        "src/bin/adas_primary.rs",
    ],
    crate_features = [
        "signalling_relayed_tcp",
        "com_mw",
    ],
    data = [
        "etc/logging.json",
        "etc/mw_com_config_100.json",
    ],
    env = {
        "MW_LOG_CONFIG_FILE": "examples/rust/mini-adas/etc/logging.json",
    },
    rustc_flags = [
        "-Clink-arg=-lstdc++",
        "-Clink-arg=-lm",
        "-Clink-arg=-lc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":libmini_adas_rust_mw_com",
        "//src/feo:libfeo_rust",
        "//src/feo-com:libfeo_com_rust_mw_com",
        "//src/feo-time:libfeo_time_rust",
        "//src/feo-tracing:libfeo_tracing_rust",
        "@score_baselibs_rust//src/log/score_log",
        "@score_baselibs_rust//src/log/stdout_logger",
        "@score_communication//score/mw/com/impl/rust/com-api/com-api",
    ],
)

rust_binary(
    name = "adas_secondary",
    srcs = [
        "src/bin/adas_secondary.rs",
    ],
    crate_features = ["signalling_relayed_tcp"],
    visibility = ["//visibility:public"],
    deps = [
        ":libmini_adas_rust",
        "//src/feo:libfeo_rust",
        "//src/feo-com:libfeo_com_rust",
        "//src/feo-time:libfeo_time_rust",
        "//src/feo-tracing:libfeo_tracing_rust",
        "@score_baselibs_rust//src/log/score_log",
        "@score_baselibs_rust//src/log/stdout_logger",
    ],
)

rust_binary(
    name = "adas_secondary_mw_com",
    srcs = [
        "src/bin/adas_secondary.rs",
    ],
    crate_features = [
        "signalling_relayed_tcp",
        "com_mw",
    ],
    data = [
        "etc/logging.json",
        "etc/mw_com_config_101.json",
        "etc/mw_com_config_102.json",
    ],
    env = {
        "MW_LOG_CONFIG_FILE": "examples/rust/mini-adas/etc/logging.json",
    },
    rustc_flags = [
        "-Clink-arg=-lstdc++",
        "-Clink-arg=-lm",
        "-Clink-arg=-lc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":libmini_adas_rust_mw_com",
        "//src/feo:libfeo_rust",
        "//src/feo-com:libfeo_com_rust_mw_com",
        "//src/feo-time:libfeo_time_rust",
        "//src/feo-tracing:libfeo_tracing_rust",
        "@score_baselibs_rust//src/log/score_log",
        "@score_baselibs_rust//src/log/stdout_logger",
        "@score_communication//score/mw/com/impl/rust/com-api/com-api",
    ],
)

cc_library(
    name = "cpp_activities",
    srcs = [
        "src/cpp/lane_assist.cpp",
        "src/cpp/trajec_vis.cpp",
    ],
    hdrs = [
        "src/include/lane_assist.h",
        "src/include/trajec_vis.h",
    ],
    includes = [
        "src/include",
        "//src/feo-cpp-build:src/include",
    ],
    deps = [
        "//src/feo-cpp-build:libfeo_cpp_build_cc",
    ],
)
