# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load(":adas_variants.bzl", "adas_variants")

adas_variants(
    name = "adas",
    env = {
        "MW_LOG_CONFIG_FILE": "examples/rust/mini-adas/etc/logging.json",
    },
    lib_srcs = [
        "src/activities/components.rs",
        "src/activities/input.rs",
        "src/activities/mod.rs",
        "src/activities/output.rs",
        "src/config.rs",
        "src/lib.rs",
    ],
    primary_data = [
        "etc/logging.json",
        "etc/mw_com_config_100.json",
    ],
    primary_srcs = [
        "src/bin/adas_primary.rs",
    ],
    secondary_data = [
        "etc/logging.json",
        "etc/mw_com_config_101.json",
        "etc/mw_com_config_102.json",
    ],
    secondary_srcs = [
        "src/bin/adas_secondary.rs",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cpp_activities",
    srcs = [
        "src/cpp/lane_assist.cpp",
        "src/cpp/trajec_vis.cpp",
    ],
    hdrs = [
        "src/include/lane_assist.h",
        "src/include/trajec_vis.h",
    ],
    includes = [
        "src/include",
        "//src/feo-cpp-build:src/include",
    ],
    deps = [
        "//src/feo-cpp-build:libfeo_cpp_build_cc",
    ],
)
