# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@rules_rust//rust:defs.bzl", "rust_library")
load("@score_baselibs//score/language/safecpp:toolchain_features.bzl", "COMPILER_WARNING_FEATURES")

rust_library(
    name = "mini_adas_gen_rs",
    srcs = ["mini_adas_gen.rs"],
    crate_name = "mini_adas_gen",
    features = ["link_std_cpp_lib"],
    visibility = [
        "//examples/rust/mini-adas:__subpackages__",
    ],
    deps = [
        ":mini_adas_gen_cpp",
        "@score_baselibs_rust//src/log/score_log",
        "@score_communication//score/mw/com/impl/rust/com-api/com-api",
        "@score_crates//:libc",
    ],
)

cc_library(
    name = "mini_adas_gen_cpp",
    srcs = ["mini_adas_gen.cpp"],
    hdrs = ["mini_adas_gen.h"],
    features = COMPILER_WARNING_FEATURES,
    implementation_deps = [
        "@score_communication//score/mw/com/impl/rust/com-api/com-api-ffi-lola:registry_bridge_macro_cpp",
    ],
    alwayslink = True,
)
