[package]
name = "test_agent"
version = "0.1.0"
edition = "2021"

[features]
com_iox2 = []
com_linux_shm = []

[dependencies]
feo = { workspace = true }
feo-com = { workspace = true }
feo-log = { workspace = true }
feo-logger = { workspace = true }
feo-cpp-macros = { workspace = true }
feo-time = { workspace = true }
feo-tracing = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
clap = { workspace = true }
ipc-channel = { workspace = true }
serde = { workspace = true }
